로또: 2단계 - 로또(자동) (#4034)
* fix: Apply code review feedback on <mia-developer/step1>

Reviewed by: @ksy90101

* feat: implement lotto application

* feat: add contains method to LottoTicket

* refactor: extract ticketNumberPool to a class variable

* feat: validate that purchase amount is greater than zero

* feat: implement lottoNumber and LottoNumberGeneratorStrategy

---------

Co-authored-by: mia.meow <mia.meow@kakaocorp.com>