@@ -10,7 +10,7 @@ public class StringCalculator {
     }
 
     private void validateInput(final String input) {
-        if (input == null || input.trim().isEmpty()) {
+        if (input == null || input.isBlank()) {
             throw new IllegalArgumentException("입력값이 null 이거나 빈 공백 문자열입니다.");
         }
     }
@@ -33,44 +33,14 @@ public class StringCalculator {
 
     private int calculateNextOperation(final int result, final String[] tokens, final int operatorIndex) {
         validateOperatorAndOperand(tokens, operatorIndex);
-        String operator = tokens[operatorIndex];
         int number = Integer.parseInt(tokens[operatorIndex + 1]);
 
-        return performOperation(result, operator, number);
+        return Operator.of(tokens[operatorIndex]).operate(result, number);
     }
 
     private void validateOperatorAndOperand(final String[] tokens, final int operatorIndex) {
         if (operatorIndex + 1 >= tokens.length) {
             throw new IllegalArgumentException("연산자 뒤에 피연산자가 없습니다.");
         }
-    }
-
-    private int performOperation(final int current, final String operator, final int number) {
-        switch (operator) {
-            case "+": return add(current, number);
-            case "-": return subtract(current, number);
-            case "*": return multiply(current, number);
-            case "/": return divide(current, number);
-            default: throw new IllegalArgumentException("지원하지 않는 연산자입니다: " + operator);
-        }
-    }
-
-    private int add(final int a, final int b) {
-        return a + b;
-    }
-
-    private int subtract(final int a, final int b) {
-        return a - b;
-    }
-
-    private int multiply(final int a, final int b) {
-        return a * b;
-    }
-
-    private int divide(final int a, final int b) {
-        if (b == 0) {
-            throw new IllegalArgumentException("0으로 나눌 수 없습니다.");
-        }
-        return a / b;
     }
 }
